# DSPBB

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  codecov.yml  conanfile.py  conanfile.txt  embold.yaml  sonar-project.properties
.github/workflows/: build_and_test.yml  clang_format.yml  codecov.yml  deploy.yml  release.yml  sonarcube.yml  sonarqube.yml
benchmark/: Bench_ApplyFilter.cpp  Bench_Convolution.cpp  Bench_VectorizedAlgorithms.cpp  CMakeLists.txt  main.cpp
docs/: accuracy.md  features.md  installation.md  introduction.md  performance.md
examples/: 01_Basics.cpp  02_FFT.cpp  03_IIR_Filtering.cpp  04_FIR_Filtering.cpp  CMakeLists.txt  LICENSE.md
examples/RtAudio/: .clang-format  RtAudio.cpp  RtAudio.h
examples/Tools/: LoadSound.cpp  LoadSound.hpp  PlaySound.cpp  PlaySound.hpp
examples/data/: SN_m_tot_V2.0.txt
include/dspbb/: CMakeLists.txt
include/dspbb/ComputeKernels/: Arithmetic.hpp  Convolution.hpp  Functors.hpp  Numeric.hpp  VectorizedAlgorithms.hpp  VectorizedMathFunctions.hpp
include/dspbb/DSP/: Convolution.hpp  FFT.hpp  FIR.hpp  Interpolation.hpp  PolyphaseFilter.hpp  WindowFunctions.hpp
include/dspbb/Filtering/: Convolution.hpp  FFT.hpp  FIR.hpp  FIR2.hpp  FIRCommon.hpp  FIRCommon2.hpp  FIRDescs.hpp  FIRLeastSquares.hpp  FIRTransforms.hpp  FIRWindowed.hpp  FilterParameters.hpp  FilterUtility.hpp  Hilbert.hpp  IIR.hpp  Interpolation.hpp  MeasureFilter.hpp  OverlapAdd.hpp  Polyphase.hpp  PolyphaseFilter.hpp  Resample.hpp  WindowFunctions.hpp  Windowing.hpp
include/dspbb/Filtering/FIR/: BandTransforms.hpp  Descs.hpp  Filter.hpp  LeastSquares.hpp  Windowed.hpp
include/dspbb/Filtering/IIR/: BandTransforms.hpp  Butterworth.hpp  Chebyshev.hpp  Descs.hpp  Elliptic.hpp  Filter.hpp  PoleZeroSystem.hpp  Realizations.hpp  RepresentationTransforms.hpp  Structures.hpp  System.hpp  TransferFunctionSystem.hpp
include/dspbb/Generators/: Sine.hpp  Spaces.hpp  Waveforms.hpp
include/dspbb/Kernels/: Convolution.hpp  Functors.hpp  Math.hpp  Numeric.hpp  Utility.hpp
include/dspbb/LTISystems/: DiscretizationTransforms.hpp  PoleZeroSystem.hpp  RepresentationTransforms.hpp  System.hpp  Systems.hpp  TransferFunctionSystem.hpp
include/dspbb/Math/: Arithmetic.hpp  Convolution.hpp  DotProduct.hpp  EllipticFunctions.hpp  FFT.hpp  Functions.hpp  JacobiFunctions.hpp  Math.hpp  OverlapAdd.hpp  Polynomials.hpp  Rational.hpp  RootTransforms.hpp  Solvers.hpp  Statistics.hpp
include/dspbb/PocketFFT/: pocketfft_hdronly.h
include/dspbb/Primitives/: Signal.hpp  SignalArithmetic.hpp  SignalTraits.hpp  SignalView.hpp  Span.hpp
include/dspbb/Utility/: Algorithm.hpp  Interval.hpp  Numbers.hpp  TemplateUtil.hpp  TypeTraits.hpp
include/dspbb/Vectorization/: ComplexFunctions.hpp  Kernels.hpp  MathFunctions.hpp
include/pocketfft/: pocketfft_hdronly.h
studies/: jacobi_elliptic_functions.py  jacobi_elliptic_functions.wl  theta_functions.py  theta_functions.wl
support/: update-conan-profile.py
test/: CMakeLists.txt  TestUtils.hpp  Test_Algorithm.cpp  Test_Arithmetic.cpp  Test_Convolution.cpp  Test_FFT.cpp  Test_FirFilter.cpp  Test_Functions.cpp  Test_Generators.cpp  Test_Hilbert.cpp  Test_Interpolation.cpp  Test_Kernels.cpp  Test_OverlapAdd.cpp  Test_Polyphase.cpp  Test_Signal.cpp  Test_SignalArithmetic.cpp  Test_SignalView.cpp  Test_Span.cpp  Test_Statistics.cpp  Test_WindowFunctions.cpp  main.cpp
test/ComputeKernels/: Test_Kernels.cpp
test/Filtering/: Test_FFT.cpp  Test_FIR.cpp  Test_FilterParameters.cpp  Test_FirFilter.cpp  Test_IIR.cpp  Test_Interpolation.cpp  Test_MeasureFilter.cpp  Test_OverlapAdd.cpp  Test_Polyphase.cpp  Test_Resample.cpp  Test_Windowing.cpp
test/Filtering/FIR/: Test_Descs.cpp  Test_FIRDescs.cpp
test/Filtering/IIR/: Test_BandTransforms.cpp  Test_Descs.cpp  Test_DiscretizationTransforms.cpp  Test_Kernels.cpp  Test_Realizations.cpp
test/Generators/: Test_Generators.cpp
test/Kernels/: Test_Convolution.cpp  Test_Kernels.cpp  Test_Numeric.cpp
test/LTISystems/: Test_DiscretizationTransforms.cpp  Test_Systems.cpp
test/Math/: Test_Convolution.cpp  Test_EllipticFunctions.cpp  Test_FFT.cpp  Test_Functions.cpp  Test_JacobiFunctions.cpp  Test_OverlapAdd.cpp  Test_Polynomials.cpp  Test_Rational.cpp  Test_RootTransforms.cpp  Test_Solvers.cpp  Test_Statistics.cpp
test/Primitives/: Test_Signal.cpp  Test_SignalArithmetic.cpp  Test_SignalView.cpp
test/Utility/: Test_Interval.cpp
test/Vectorization/: Test_Kernels.cpp
test_package/: CMakeLists.txt  conanfile.py  quick_test.cpp
